--- a/docker-3-complex/docker-compose.yml
+++ b/docker-3-complex/docker-compose.yml
@@ -1,7 +1,6 @@
 rsion: "2"
 services:
-  peer1:      # 默认情况下，其他服务可以使用服务名称连接到该服务。因此，对于peer2的节点，它需要连接http://peer1:8761/eureka/，因此需要配置该
-服务的名称是peer1。
+  peer1:
     image: itmuch/microservice-discovery-eureka-ha:0.0.1-SNAPSHOT
     ports:
       - "8761:8761"
