--- a/docker-1-simple/docker-compose-easy.yml
+++ b/docker-1-simple/docker-compose-easy.yml
@@ -8,7 +8,7 @@ services:
     image: itmuch/microservice-provider-user:0.0.1-SNAPSHOT
   microservice-consumer-movie-ribbon-hystrix:
     image: itmuch/microservice-consumer-movie-ribbon-hystrix:0.0.1-SNAPSHOT
-  microservice-gateway:
+  microservice-gateway-zuul:
     image: itmuch/microservice-gateway-zuul:0.0.1-SNAPSHOT
   microservice-hystrix-dashboard:
     image: itmuch/microservice-hystrix-dashboard:0.0.1-SNAPSHOT
