--- a/docker-2-eureka-ha/docker-compose-wrong.yml
+++ b/docker-2-eureka-ha/docker-compose-wrong.yml
@@ -19,4 +19,4 @@ services:
     environment:
       - spring.profiles.active=peer2
       
-## 该文件这是最自然的玩法，但是无法正常使用。运行docker-compose up时，会报循环依赖的异常。
+## 该文件是最自然的写法，但无法正常使用。运行docker-compose up时，会报循环依赖的异常。
