--- a/docker-3-complex/docker-compose.yml
+++ b/docker-3-complex/docker-compose.yml
@@ -15,9 +15,17 @@ services:
       - spring.profiles.active=peer2
   microservice-provider-user:
     image: itmuch/microservice-provider-user:0.0.1-SNAPSHOT
+    ports:
+      - "8000:8000"
   microservice-consumer-movie-ribbon-hystrix:
     image: itmuch/microservice-consumer-movie-ribbon-hystrix:0.0.1-SNAPSHOT
+    ports:
+      - "8010:8010"
   microservice-gateway-zuul:
     image: itmuch/microservice-gateway-zuul:0.0.1-SNAPSHOT
+    ports:
+      - "8040:8040"
   microservice-hystrix-turbine:
     image: itmuch/microservice-hystrix-turbine:0.0.1-SNAPSHOT
+    ports:
+      - "8031:8031"
